<resources>
    <string name="app_name">NSO Manager</string>
    <string name="name_id">Name / ID</string>
    <string name="credits">Credits</string>
    <string name="hours">Hours</string>
    <string name="click_on_the_button_to_add_a_new_student">Click on the + button to add a new student</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="credits_registered">Credits Registered</string>
    <string name="hours_completed">Hours Completed</string>
    <string name="add">Add</string>
    <string name="roll_number">Roll Number</string>
    <string name="update">Update</string>
</resources>