<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".NewStudentActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:boxStrokeErrorColor="@color/material_red"
                app:errorEnabled="true"
                app:errorIconTint="@color/material_red"
                app:errorTextColor="@color/material_red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_label"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/colorDrawable"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:maxLines="1"
                    tools:ignore="TextContrastCheck,UnusedAttribute" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRollNumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:hint="@string/roll_number"
                app:boxStrokeErrorColor="@color/material_red"
                app:errorEnabled="true"
                app:errorIconTint="@color/material_red"
                app:errorTextColor="@color/material_red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRollNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_account"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/colorDrawable"
                    android:includeFontPadding="false"
                    android:inputType="numberDecimal|numberSigned"
                    android:maxLines="1"
                    tools:ignore="TextContrastCheck,UnusedAttribute" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCredits"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/credits_registered"
                app:boxStrokeErrorColor="@color/material_red"
                app:errorEnabled="true"
                app:errorIconTint="@color/material_red"
                app:errorTextColor="@color/material_red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCredits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_sports"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/colorDrawable"
                    android:includeFontPadding="false"
                    android:inputType="numberDecimal|numberSigned"
                    android:maxLines="1"
                    tools:ignore="TextContrastCheck,UnusedAttribute" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilHours"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:hint="@string/hours_completed"
                app:boxStrokeErrorColor="@color/material_red"
                app:errorEnabled="true"
                app:errorIconTint="@color/material_red"
                app:errorTextColor="@color/material_red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_hourglass"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/colorDrawable"
                    android:includeFontPadding="false"
                    android:inputType="numberDecimal|numberSigned"
                    android:maxLines="1"
                    tools:ignore="TextContrastCheck,UnusedAttribute" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddStudent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:elevation="4dp"
                android:text="@string/add"
                app:cornerRadius="8dp"
                app:elevation="4dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>